<resources>
    <string name="app_name">ProblemSolver</string>

    <string name="title">Welcome to the Farmer, Wolf, Goat, and Cabbage Problem</string>
    <string name="intro">A farmer and his wolf, goat, and cabbage come to the edge of a river they wish to cross. There is a boat at the river\'s edge that only the farmer can row. The farmer can take at most one other object besides himself on a crossing, but if the wolf is ever left with the goat, the wolf will eat the goat; similarly, if the goat is left with the cabbage, the goat will eat the cabbage. Devise a sequence of crossings of the river so that all four characters arrive safely on the other side.</string>
    <string name="button_begin">Begin</string>
    <string name="button_self">Self</string>
    <string name="button_wolf">Wolf</string>
    <string name="button_goat">Goat</string>
    <string name="button_cabbage">Cabbage</string>
    <string name="button_reset">Reset</string>
    <string name="farmer_takes">Farmer Takes:</string>

</resources>
